--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/register?createDatabaseIfNotExist=true
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
-
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
